--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>color-test</title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <pre>
+      <code>
+        var app6 = new Vue({
+          el: '#app-6',
+          data: {
+            message: 'Hello Vue!'
+          }
+        })
+      </code>
+    </pre>
     <!-- built files will be auto injected -->
   </body>
 </html>
